# adk-tool-trajectory-eval-sample

./: README.md  pyproject.toml
sample_agent/: agent.py
tests/: test_sample_agent.py
tests/evalsets/: basic.evalset.json
