[project]
name = "template"
version = "0.1.0"
description = "template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk[eval]>=1.27.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.141.0",
    "google-genai>=1.67.0",
    "pydantic>=2.12.5",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
norecursedirs = ["_archive", "_archive/*"]
